chore: system architecture stabilization and quality improvement
- Decomposed 'God Classes' into modular helpers in com.nexusarchive.service.helper
- Migrated all QueryWrapper usage to type-safe LambdaQueryWrapper project-wide
- Fixed 24+ failing backend tests (Mockito stubbing, MyBatis lambda cache)
- Resolved 22 frontend Vitest failures (QueryClientProvider, mock redirections)
- Updated architecture rules to support new helper pattern
- Improved system compliance with DA/T 94-2022 standards